zeta-code/tui/src/app/snapshots/app__interaction_flow_tests__recovered_home_draft.snap
---
source: zeta-code/tui/src/app/interaction_flow_tests.rs
expression: "render(&restored, 80, 20)"
---
  .                                                        [— / —] [Dashboard]













  ⏸ ask permissions on
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ > new task draft                                                         │
  ╰──────────────────────────────────────────────────────── Automatic model ─╯

  Enter send  ·  / commands
